--- a/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/components/vaadin-details.css
+++ b/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/components/vaadin-details.css
@@ -26,4 +26,15 @@
     display: none;
 }
 
+:host([class*='jmix-menubar-item']) [part='summary'] {
+    padding: 0;
+}
+
+:host([class*='jmix-menubar-item'][opened]) [part='summary'] {
+    padding-bottom: var(--lumo-space-s);
+}
+:host([class*='jmix-menubar-item']) [part='content'] {
+    padding: 0;
+}
+
 /* <list menubar styles/> */
