Flow UI menu API

--- a/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/list-menu.css
+++ b/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/list-menu.css
@@ -17,6 +17,7 @@
 .jmix-list-menu {
     color: var(--lumo-secondary-text-color);
     margin: 0 var(--lumo-space-s);
+    overflow: auto;
     padding: 0;
 }
 
