--- a/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/styles.css
+++ b/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/styles.css
@@ -1,6 +1,6 @@
-@import url('./dialog-window.css');
-@import url('./exception-dialog-window.css');
-@import url('./jmix-notification.css');
+@import url('app/dialog-window.css');
+@import url('app/exception-dialog-window.css');
+@import url('app/jmix-notification.css');
 @import url('./list-menu.css');
 
 html {
