--- a/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/list-menu.css
+++ b/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/list-menu.css
@@ -56,6 +56,7 @@
     padding: var(--lumo-space-s);
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
 }
 
 .jmix-list-menu .jmix-menu-item-link .link-text {
