--- a/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/styles.css
+++ b/jmix-flowui/flowui-themes/src/main/resources/META-INF/resources/themes/helium/styles.css
@@ -2,7 +2,9 @@
 @import url('app/exception-dialog-window.css');
 @import url('app/jmix-notification.css');
 @import url('app/main-screen.css');
+
 @import url('components/list-menu.css');
+@import url('components/user-indicator.css');
 
 html {
      --jmix-lumo-warning-background-color: hsla(43, 100%, 74%, 1);
